# immich-janitor

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  EXAMPLES.md  LICENSE  README.md  pyproject.toml  pytest.ini
.github/: BRANCHING_RETROSPECTIVE.md  DEVELOPER_GUIDELINES.md  FEATURE_BRANCH_TEMPLATE.md  PR_WORKFLOW.md  pull_request_template.md
immich_janitor/: __init__.py  cli.py  cli_duplicates.py  cli_stats.py  cli_trash.py  client.py  config.py  models.py  regex_helper.py  utils.py
tests/: __init__.py  test_client.py  test_models.py  test_regex_helper.py  test_utils.py
